spotless and implement file system lld